gtk/sass/3.20/_3rd-party.scss
/* ... */
// tab 'close' button when 'use tabs instead of sidebars'
notebook.tilix-background tab.reorderable-page button.tilix-small-button {
  // hard-coded 2px padding
  min-width: 0;
  min-height: 0;

  > widget > box > image {
    margin: 0 -2px;
    padding: rem(5.3px - 2.7px, $sw: 1.0);
  }
}


// /********
//  * PSPP *
//  ********/

// upstream should convert this to treeview node
notebook.psppire-data-editor widget.view {
  border-radius: 0; // unset roundness of cells

  entry { // = editable cell
    &,
    &:focus {
      min-width: unset;
      min-height: unset;
      padding: 0 2px;
      border-image: none;
      border-color: $selected_bg_color;
      background-color: $light_color;
      transition: none;
      &:dir(ltr) { border-left-width: 2px; }
      &:dir(rtl) { border-right-width: 2px; }
    }
  }

  button:not(.flat) { // = column_header buttons
    @extend %column_header_button;
  }
}


// /**************
//  * Vala-Panel *
//  **************/

// That app does not have any position specific style-classes,
// so embed indicators at the bottom of tasklist buttons as default.
// Then that app looks quite weird in vertical layout at all.
window#ValaPanel.background { // solid-mode
  background-color: $panel_bg_color;
  color: $inverted_fg_color;

  decoration { all: unset; } // unset all decorations

  widget.-vala-panel-background > separator { // separator applet
    background-color: $panel_separator_color;
  }
}

button.flat.-panel-button { // generic panel buttons
  min-width: $icon_size;
  min-height: $icon_size;
  border-radius: 0;
  color: $inverted_fg_color;
  font-weight: 700;
  &:hover,
  &:active { color: $selected_fg_color; }
  &:checked {
    background-color: transparent;
    color: $selected_fg_color;
    box-shadow: inset 0 -2px $selected_bg_color;
    &:hover {
      background-image: radial-gradient(circle farthest-corner at center,
                          gtkopacity($inverted_fg_color, 0) 100%,
                          transparent 0%),
                          image(gtkopacity($inverted_fg_color, 0));
    }
  }
  &:disabled { color: $insensitive_inverted_fg_color; }

  // FIXME: weird asymmetrical spacing exists at the right side of Application-
  // Menu icon even if the 'caption' GtkLabel was hidden, so add damned
  // compensator at the opposite side...
  > widget > box.horizontal {
    &:dir(ltr) { margin-left: 2px; }
    &:dir(rtl) { margin-right: 2px; }
  }
}

button.flat.-panel-icon-button {
  @extend %budgie_icon_tasklist_button;

  &:hover {
    box-shadow: inset 0 -2px gtkopacity($inverted_fg_color, 0.4);
  }
  &:active,
  &:checked {
    box-shadow: inset 0 -2px $selected_bg_color;
  }
}

.unpinned button.flat.-panel-icon-button,
.pinned button.flat.-panel-icon-button.running {
  @extend %running_budgie_icon_tasklist_button;

  > image {
    background-image: image($selected_bg_color);
    background-size: 6px 2px;
    background-position: bottom center;
  }

  &:hover,
  &:active,
  &:checked {
    box-shadow: inset 0 -2px $selected_bg_color;
  }
}

// menubar-style'ed app menu
menubar.-vala-panel-background > menuitem { // override global values
  padding: 0 rem(4px, $sw: 1.0);
  font-weight: 700;
}

// run dialog
.-panel-run-dialog {
  scrolledwindow.frame { margin: 6px 0 0; }

  row.activatable {
    .dim-label { opacity: 0.87; }

    &:hover,
    &:active,
    &:selected {
      .dim-label { opacity: 1.0; }
    }
  }
}

// non-CSD preference dialog
dialog.background:not(.csd) {
  .dialog-vbox stacksidebar.sidebar scrolledwindow {
    .frame { border: 1px solid $borders_color; }

    list {
      &:dir(ltr),
      &:dir(rtl) { box-shadow: none; }
    }
  }
}


// /************
//  * Ubiquity *
//  ************/

window#live_installer {
  widget#title_eventbox.menubar { // title header container
    font-weight: 700;

    label#page_title,
    image#page_logo { color: $inverted_fg_color; }
  }

  widget#progress_eventbox.menubar { // bottom container
    color: $inverted_fg_color;

    expander {
      title {
        label,
        arrow {
          color: $inverted_secondary_fg_color;
          &:hover,
          &:active { color: $inverted_fg_color; }
          &:disabled { color: $insensitive_inverted_fg_color; }
        }
      }

      textview.view { // scrolled text-views
        &, > text {
          background-color: $base_color;
          color: $fg_color;
          caret-color: $fg_color;
        }
      }
    }

    // 4px from <data>
    progressbar trough { border-radius: 4px; }
  }
}

